# helix-dashboard

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  start.sh
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: lib.rs  main.rs  query_parser.rs  schema_parser.rs  utils.rs
backend/src/core/: helix_client.rs  helix_types.rs  mod.rs  query_parser.rs  schema_parser.rs  utils.rs
backend/src/web/: errors.rs  handlers.rs  mod.rs  params.rs  types.rs  utils.rs
frontend/: middleware.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css
frontend/src/app/api/endpoints/: route.ts
frontend/src/app/api/node-connections/: route.ts
frontend/src/app/api/node-details/: route.ts
frontend/src/app/api/nodes-by-label/: route.ts
frontend/src/app/api/nodes-edges/: route.ts
frontend/src/app/api/schema/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/analytics/: page.tsx
frontend/src/app/dashboard/queries/: page.tsx  utils.ts
frontend/src/app/dashboard/schema/: page.tsx
frontend/src/app/dashboard/visualization/: AnimatedSVGEdge.tsx  page.tsx  visualization.css
frontend/src/components/: app-sidebar.tsx  json-syntax-viewer.tsx  json-table.tsx  nav-projects.tsx  optimized-json-viewer.tsx
frontend/src/lib/: fetch.test.ts  fetch.ts  logger.test.ts  logger.ts  try-catch.test.ts  try-catch.ts
frontend/src/lib/api-client/: endpoints.ts  requests.ts  types.ts
frontend/src/utils/: endpoints.ts  schema.ts
(+11 files in other folders)
