[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
polars = { version = "0.49.1", features = ["csv"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
helix-rs = "0.1.3"
anyhow = "1.0.98"
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
axum-macros = "0.4.2"
clap = { version = "4.5", features = ["derive"] }
